Fixed the Font-size, Dom Sanitizer, and Email Overflow in People, C&F banner.

--- a/src/app/views/centres-and-facilities/centres-and-facilities.component.scss
+++ b/src/app/views/centres-and-facilities/centres-and-facilities.component.scss
@@ -3,11 +3,6 @@
   color: #ffffff;
   text-shadow: 2px 2px 2px rgba(0,0,0,3);
 }
-.color-overlay{
-  width: 99vw;
-  height: 100%;
-  background-color: rgba(19, 20, 46, 0.8);
-}
 h1{
   font-size: 2rem;
   text-shadow: 1px 1px 1px rgba(15, 144, 209, 0.945) ;
